Acomplished second task

--- a/2task.html
+++ b/2task.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./2task.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -19,13 +23,13 @@
         <button>See our Projects</button>
       </header>
       <main>
-        <div>
+        <div class="experience_con">
           <ul class="experience">
             <li>25</li>
             <li>Years of Experience</li>
           </ul>
         </div>
-        <div>
+        <div class="about_us_con">
           <h4>About Us</h4>
           <h2>Architechtural plan design and build</h2>
           <hr />
@@ -36,8 +40,8 @@
             Minima ullam maxime cupiditate.
           </p>
           <ul>
-            <li></li>
-            <li></li>
+            <li>Consectetur adipisicing sed do eiusmod.</li>
+            <li>Eiusmod tempor incididunt labore.</li>
           </ul>
           <button>About Us</button>
         </div>
