created new folders for pictures and font

--- a/1task.html
+++ b/1task.html
@@ -33,10 +33,10 @@
         <hr />
         <div class="projects">
           <div class="project_img">
-            <img src="./desktop_hd_4x.webp" alt="website" />
+            <img src="./pictures/desktop_hd_4x.webp" alt="website" />
           </div>
           <div class="project_img">
-            <img src="./Twitter.webp" alt="website" />
+            <img src="./pictures/Twitter.webp" alt="website" />
           </div>
         </div>
       </main>
